Format + <> + remove deprecated
Signed-off-by: barriern <nicolas.barrier@ird.fr>